# JSPECTER

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
examples/: usage.py
jspecter/: __init__.py  cli.py  config.py  crawler.py  cve_engine.py  git_module.py  js_analyzer.py  react2shell.py  reporter.py  secrets_engine.py  tester.py  utils.py
tests/: test_react2shell.py  test_scope.py
